<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_back">Welcome back</string>
    <string name="cinnabon">cinnabon</string>
    <string name="login_shape">login_shape</string>
    <string name="background">background</string>
    <string name="sign_in_button">sign_in_button</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="facebook">facebook</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or_continue_as_guest">or continue as guest</string>
    <string name="google">google</string>
    <string name="sign_up"><u>Sign up</u></string>
</resources>