<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/background_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="170dp"
        android:layout_height="105dp"
        android:fontFamily="@font/poppins_700"
        android:text="@string/welcome_back"
        android:textColor="@color/brown"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/cinnabon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cinnabon"
        android:src="@drawable/cinnabon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <ImageView
        android:id="@+id/login_shape"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/login_shape"
        android:src="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000"
        android:contentDescription="@string/sign_in_button"
        android:src="@drawable/sign_in_button"
        app:layout_constraintBottom_toBottomOf="@id/login_shape"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5285" />

    <TextView
        android:id="@+id/text_please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_500"
        android:text="@string/please_sign_in"
        android:textColor="#4F4F4F"
        android:textSize="24sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/login_shape"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="@id/login_shape"
        app:layout_constraintRight_toRightOf="@id/login_shape"
        app:layout_constraintTop_toTopOf="@id/login_shape"
        app:layout_constraintVertical_bias="0.1425" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/login_shape"
        app:layout_constraintLeft_toLeftOf="@id/login_shape"
        app:layout_constraintRight_toRightOf="@id/login_shape"
        app:layout_constraintTop_toTopOf="@id/login_shape"
        app:layout_constraintVertical_bias="0.35" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="@id/login_shape"
        app:layout_constraintLeft_toLeftOf="@id/login_shape"
        app:layout_constraintRight_toRightOf="@id/login_shape"
        app:layout_constraintTop_toTopOf="@id/login_shape"
        app:layout_constraintVertical_bias="0.52"
        app:passwordToggleDrawable="@drawable/ic_eye"
        app:passwordToggleTint="@color/bright_pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:contentDescription="@string/facebook"
        android:scaleType="center"
        android:src="@drawable/ic_facebook"
        style="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintVertical_bias="0.1" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:src="@drawable/ic_google"
        android:background="#0000"
        app:style="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/google"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/guestTextView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="1dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="#0000"
        android:fontFamily="@font/poppins_500"
        android:paddingTop="5dp"
        android:text="@string/or_continue_as_guest"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toOf="@id/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="21dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_500"
        android:text="@string/forgot_password"
        android:textColor="@color/bright_blue"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guestTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_500"
        android:text="@string/sign_up"
        android:textColor="@color/bright_blue"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guestTextView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>